<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name_title"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:text="Eletric Car"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:id="@+id/car_title_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_carros"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/favoritos"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/car_title_fragment"
        app:layout_constraintTop_toTopOf="@id/car_title_fragment" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/iv_car"
        android:src="@drawable/carro_eletrico"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_title_fragment" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_preco"
        android:text="@string/preco"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/iv_car"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_preco_value"
        android:text="@string/preco_value"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tv_preco"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        />

    <TextView
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:id="@+id/tv_bateria"
        android:text="@string/bateria"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_bateria_value"
        android:text="530WH"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tv_bateria"
        app:layout_constraintStart_toEndOf="@id/tv_bateria"
        />

    <TextView
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:id="@+id/tv_potencia"
        android:text="@string/pot_ncia"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_potencia_value"
        android:text="500v"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tv_potencia"
        app:layout_constraintStart_toEndOf="@id/tv_potencia"
        />

    <TextView
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:id="@+id/tv_recarga"
        android:text="@string/recarga"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_recarga_value"
        android:text="23min"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tv_recarga"
        app:layout_constraintStart_toEndOf="@id/tv_recarga"
        />

</androidx.constraintlayout.widget.ConstraintLayout>