<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_itemcar"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:contentPadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/gray_app">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/car_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-10dp"
            tools:layout_editor_absoluteY="185dp">

            <ImageView
                android:id="@+id/star"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/baseline_star_outline_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/baseline_star_outline_24" />


            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/carro_eletrico"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_itemcar"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="0dp"
                android:text="@string/preco"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_car" />

            <TextView
                android:id="@+id/tv_preco_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco_value"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_preco"
                app:layout_constraintTop_toTopOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_bateria"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/bateria"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"

                />

            <TextView
                android:id="@+id/tv_bateria_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="530WH"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_bateria"
                app:layout_constraintTop_toTopOf="@id/tv_bateria" />

            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/pot_ncia"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

            <TextView
                android:id="@+id/tv_potencia_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="500v"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_potencia"
                app:layout_constraintTop_toTopOf="@id/tv_potencia" />

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/recarga"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

            <TextView
                android:id="@+id/tv_recarga_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23min"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_recarga"
                app:layout_constraintTop_toTopOf="@id/tv_recarga" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>